MacViews: Handle Ctrl+F5 "Move focus to toolbar".

This is configured in System Preferences -> Keyboard -> Shortcuts ->
Keyboard. Turns out AppKit dispatches -_handleFocusToolbarHotKey: for it.

TEST=With chrome://flags/#views-browser-windows on Mac, have focus in
web contents. Press Ctrl+F5. Focus should move to the omnibox or a toolbar
button (Ctrl+F7 toggles this).

Bug: 749108
Change-Id: I9f207112ede2eb250644fb4353557ac7d216bd91
Reviewed-on: https://chromium-review.googlesource.com/1080439
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563511}
Former-commit-id: 9d3ad388678248130cec2cf8f75bc6af93343241